# StudyMate

back-end/: Imp_links.md  chat.py  main.py  pyproject.toml  requirements.txt  text.txt
back-end/models/: completion_response.py  search_model.py
back-end/shared/: chunking_manager.py  index_search_manager.py  openai_manager.py  storage_client.py
study-mate/: package-lock.json  package.json
study-mate/public/: index.html
study-mate/src/: App.css  App.js
study-mate/src/pages/Home/: index.js  style.scss
study-mate/src/pages/Layout/: index.js
